--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -102,7 +102,7 @@
   background-color: rgba(20,20,20,0.7);
 }
 #author-name {
-  letter-spacing: 0.2em;
+  letter-spacing: normal;
   font-size: 2vw;
 }
 .who-we-are-container {
