--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,6 +2,7 @@
 * {
    padding: 0;
    margin: 0;
+   font-family: "Asap";
 }
 
 /* Font-face */
@@ -41,7 +42,6 @@
 .welcome a {
     text-decoration: none;
     color: inherit;
-    display: block;
 }
 .who-we-are {
   font-family: "Asap";
@@ -79,6 +79,9 @@
   opacity: 0.7;
   box-shadow: 0 -3px 5px #d3d3d3;
 }
+.welcome-container {
+  width: 100%;
+}
 .welcome-main {
   width: inherit;
   height: 600px;
@@ -103,13 +106,15 @@
   background-color: rgba(20,20,20,0.7);
 }
 #author-name {
-  letter-spacing: normal;
+  letter-spacing: 0.2em;
   font-size: 2vw;
 }
 .who-we-are-container {
   width: 95%;
   margin: auto;
   margin-top: 10vh;
+  display: block;
+  height: 600px;
 }
 .who-we-are-left {
   display: flex;
@@ -145,6 +150,8 @@
 }
 .who-we-are-imgs {
   position: relative;
+  display: block !important;
+  height: inherit;
 }
 .who-we-are-imgs img{
   width: 25%;
@@ -197,7 +204,221 @@
 
 
 /* style bagian 3 */
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
+a{
+	text-decoration: none;
+}
+
+/*---------------------Clearfix-------------------------*/
+
+
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.cf:after {
+    clear: both;
+}
+
+/**
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+.cf {
+    *zoom: 1;
+}
+
+
+/*--------------------------style----------------------------*/
+
+/*===================style top=========================*/
+
+.bagian3 {
+  height: 600px;
+  	background-color: #eee;
+}
+
+.top-wrap{
+	background-color:#8A00FF;
+	color:#fff;
+	text-align: center;
+}
+
+.container{
+  height: 15vw;
+	padding: 0px auto;
+	margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.top {
+	padding: 20px 0;
+	display: inline-block;
+	margin: 4.5vw;
+  font-size: 1.8vw;
+}
+
+.top p {
+  line-height: 4vw;
+}
+
+.top-h2 {
+  font-size: 4vw;
+  font-weight: bold;
+}
+
+.complete-project, .client, .photo-edit{
+
+}
+
+/*============================style testi=====================*/
+
+.testi{
+	padding: 50px;
+  margin-top: 5vw;
+}
+
+.testi-wrap{
+	width: 55%;
+	float: left;
+}
+
+.heading{
+	text-align: center;
+	margin-bottom: 30px;
+}
+
+.heading h1{
+	font-size: 20px;
+}
+
+.wrap-box{
+	background-color: white;
+	box-shadow: 0 0 6px rgba(0,0,0,.3);
+	border-radius: 5px;
+  width: 80%;
+}
+
+.container-box{
+	padding: 30px 15px;
+}
+
+.project-img{
+	float: left;
+	border-radius: 50%;
+}
+
+.text-box{
+	text-align: center;
+	margin-top: 40px;
+}
+
+.name-people{
+	padding: 5px;
+}
+
+.satisfaction{
+	text-align: center;
+	margin-top: 10px;
+}
+
+.rating{
+	font-size: 50px;
+	padding: 50px 0;
+}
+
+.fas{
+	color: #FCED00;
+}
+
+.btn-sm a{
+	background-color: rgba(138, 0, 255, 0.7);
+	padding: 10px 15px;
+	color: white;
+	border-radius: 7px;
+	transition: 0.5s;
+}
+
+.btn-sm a:hover{
+	background-color: rgba(138, 0, 255, 1);
+}
+
+/* Ini Bagian Latest nya*/
+.latest-project-container {
+  margin-top: 6vw;
+}
+.latest-project-text {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.latest-project-text ul {
+  margin-top: 3vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.latest-project-text li {
+  flex-direction: row;
+  padding: 1vw;
+  border-bottom: 2px solid white;
+  margin-bottom: 3vh;
+}
+.latest-project-text li:hover {
+  border-bottom: 2px solid rgb(200,50,200);
+  transition: 0.5s;
+}
+.latest-project-img {
+  width: 80%;
+  margin: auto;
+  margin-bottom: 5vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 50% 50%;
+  grid-gap: 1vw;
+  justify-content: center;
+  align-content: : center;
+}
+.latest-project-img .latest {
+  align-self: center;
+  width: 15vw;
+  height: 9vw;
+}
+.latest-project-img img:hover{
+  z-index: 10;
+  width: 15em;
+  height: auto;
+  box-shadow: 0 0 5px rgb(100,100,100);
+  transition: 2s;
+}
 /* akhir style bagian 3 */
 
 
